WBWRI-842 Fixed stretched images becoming wider than its parent element.

--- a/plugins/nl.fdmg.genre/scss/genre.scss
+++ b/plugins/nl.fdmg.genre/scss/genre.scss
@@ -215,6 +215,7 @@ a.fdmg-box {
     >img {
       max-height: 460px;
       width: auto !important;
+      max-width: 100%;
       display: block;
       margin: 0 auto;
     }
